# TheRedAlliance

./: .gitignore  LICENSE  README.md  jsconfig.json  main.py  plan.md  pyproject.toml  requirements.txt  requirments.txt  reset_db.py  run
backend/: __init__.py  routes.py
backend/models/: form.py  models.py  user.py
backend/routes/: users.py
frontend/: package-lock.json  package.json
frontend/src/: main.js
old-write/: jsconfig.json  pyproject.toml
old-write/tra/: helpers.py  routes.py
old-write/tra/static/: main.css  main.js
old-write/tra/templates/: admin.html  admin_setup.html  base.html  create_form.html  login.html  test.html
tests/: create-responses.py
tra/: __init__.py  __main__.py  data.sqlite3  helpers.py  models.py  routes.py  server.py
tra/routes/: __init__.py  admin.py  api.py  routes.py  scouts.py
tra/static/: main.css  main.js  package-lock.json  package.json
tra/templates/: admin.html  admin_login.html  admin_setup.html  base.html  header.html  home.html  login.html  notification.html  scouting.html
tra/templates/admin/: admin.html  admin_login.html  admin_setup.html  create_form.html  create_schedule.html  form_res.html  forms_tab.html  schedule_tab.html
tra/templates/properties/: cubescones.html  imageselect.html  level-select.html  multselect.html  number-inp.html  prompt.html  textbox.html
tra/templates/public/: form.html
tra/templates/scout/: login.html
vue/: run
vue/backend/tra/: __init__.py  __main__.py  data.sqlite3  models.py  routes.py
vue/frontend/: package-lock.json  package.json
(+6 files in other folders)
