[tool.poetry]
name = "theredalliance"
version = "0.1.0"
description = "An FRC scouting application that runs on a localhost"
authors = ["Abdullah Mohammed <aamohammed4556@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
tra-start="tra:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
